hotfix: fix menu drawer on mobile

--- a/assets/custom-menu.css
+++ b/assets/custom-menu.css
@@ -424,18 +424,18 @@ body:has(header-drawer.drawer--header.is-open) .theme__header {
     /* opacity: 1; */
     pointer-events: auto;
     transform: translateX(0);
-    padding: 20px 0 40px !important;
+    padding: 20px 0 140px !important;
+    max-height: 75vh !important;
+    overflow-y: auto !important;
   }
 
-  .drawer__menu.tmenu_app:has(.tmenu_item_level_0.tmenu_item_mobile.tmenu_item_active) [title="JEWELRY"] + .tmenu_submenu--mobile.tmenu_submenu {
+  /* .drawer__menu.tmenu_app:has(.tmenu_item_level_0.tmenu_item_mobile.tmenu_item_active) [title="JEWELRY"] + .tmenu_submenu--mobile.tmenu_submenu {
     display: grid !important;
-    /* height: auto !important; */
-    /* Use vh to ensure it fits mobile screens */
     max-height: 80vh !important;
     overflow-y: auto !important;
     touch-action: auto !important;
     -webkit-overflow-scrolling: touch !important;
-  }
+  } */
 
   /* sub menu rearrangement */
   .drawer__menu.tmenu_app .tmenu_item_level_0.tmenu_item_mobile > .tmenu_submenu--mobile.tmenu_submenu {
@@ -560,7 +560,7 @@ body:has(header-drawer.drawer--header.is-open) .theme__header {
   .drawer__menu.tmenu_app [title="JEWELRY"] + .tmenu_submenu--mobile.tmenu_submenu > li.tmenu_item_level_1.tmenu_item_mobile:nth-of-type(3) > .tmenu_submenu {
     flex-direction: column !important;
     gap: 0 !important;
-    padding-bottom: 140px !important;
+    /* padding-bottom: 140px !important; */
     touch-action: pan-y;
     -webkit-overflow-scrolling: touch;
   }
